<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gray_background"
    tools:context=".DemoActivity"
    >
  <LinearLayout
      android:id="@+id/section_one"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_margin="15dp"
      android:background="@drawable/dark_gray_area"
      android:orientation="vertical"
      >
    <LinearLayout
        android:id="@+id/recognition_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        >
      <TextView
          android:id="@+id/recognitionModeLabel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="5dp"
          android:text="@string/recognition_mode"
          android:textColor="@android:color/white"
          android:textSize="22sp"
          />
      <TextView
          android:id="@+id/recognitionModeValue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:hint="@string/mode"
          android:textSize="22sp"
          android:textColor="@color/light_green"
          />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/gray"
        />
    <LinearLayout
        android:id="@+id/result_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="9"
        >
      <LinearLayout
          android:id="@+id/just_score"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="5"
          android:orientation="horizontal"
          >
        <TextView
            android:id="@+id/resultsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/results"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            />
        <TextView
            android:id="@+id/resultsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/displayed_results"
            android:textSize="22sp"
            android:textColor="@color/light_green"
            />
      </LinearLayout>
      <LinearLayout
          android:id="@+id/just_result"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="4"
          android:gravity="right"
          android:orientation="horizontal"
          >
        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/score"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            />
        <TextView
            android:id="@+id/scoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/light_green"
            />
      </LinearLayout>
    </LinearLayout>
  </LinearLayout>

  <LinearLayout
      android:id="@+id/section_two"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_above="@+id/section_three"
      android:layout_below="@+id/section_one"
      android:layout_marginRight="15dp"
      android:layout_marginLeft="15dp"
      android:background="@drawable/dark_gray_area"
      android:orientation="horizontal"
      >
    <LinearLayout
        android:id="@+id/display_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/back_drop"
        android:orientation="vertical"
        >
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >
        <TextView
            android:id="@+id/recognitionWordsLabel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/recognition_words"
            android:textColor="@color/light_green"
            android:textSize="20sp"
            android:padding="10dp"
            />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/add_button"
            />
      </RelativeLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/topNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="60"
        android:textColor="@color/light_green"
        android:textSize="20sp"
        />


  </LinearLayout>

  <LinearLayout
      android:id="@+id/section_three"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_above="@+id/section_four"
      android:layout_marginLeft="15dp"
      android:layout_marginRight="15dp"
      android:layout_marginTop="15dp"
      android:background="@drawable/dark_gray_area"
      android:orientation="vertical"
      >
    <LinearLayout
        android:id="@+id/section_three_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="10"
        >
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingLeft="-20dp"
            android:paddingRight="-5dp"
            android:src="@drawable/ic_action_mic_light"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            />
        <ImageView
            android:id="@+id/mic_light"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingLeft="-20dp"
            android:paddingRight="-5dp"
            android:src="@drawable/mic_gray"
            />
      </LinearLayout>
      <ImageView
          android:id="@+id/strengthDisplay"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:background="@drawable/back_drop"
          android:contentDescription="@string/strength_display"
          android:textColor="@android:color/white"
          android:textSize="22sp"
          />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/gray"
        />
    <LinearLayout
        android:id="@+id/section_three_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >
        <com.demo.speechfx.speechfxdemo.component.RecordButton
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/small_button_selector"
            android:contentDescription="@string/start"
            android:text="@string/start"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            />
        <com.demo.speechfx.speechfxdemo.component.PlayButton
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/small_button_selector"
            android:contentDescription="@string/play"
            android:text="@string/play"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            />
      </LinearLayout>
    </LinearLayout>
  </LinearLayout>

  <LinearLayout
      android:id="@+id/section_four"
      android:layout_width="match_parent"
      android:layout_height="35dp"
      android:layout_alignParentBottom="true"
      android:orientation="horizontal"
      android:paddingBottom="10dp"
      android:weightSum="10"
      >
    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="15dp"
        android:layout_height="18dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:clickable="true"
        android:padding="2dp"
        android:src="@drawable/back_arrow"
        />
    <TextView
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="2"
        android:clickable="true"
        android:gravity="left|center_vertical"
        android:paddingTop="3dp"
        android:text="@string/help"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        />
    <TextView
        android:id="@+id/fonixVoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="4"
        android:gravity="center_horizontal"
        android:text="@string/fonix_voice_demo"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        />
    <TextView
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="2"
        android:clickable="true"
        android:gravity="right"
        android:paddingTop="3dp"
        android:text="@string/settings"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        />
    <ImageView
        android:id="@+id/forwardArrow"
        android:layout_width="15dp"
        android:layout_height="18dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:clickable="true"
        android:padding="2dp"
        android:src="@drawable/forward_arrow"
        />
  </LinearLayout>
</RelativeLayout>
