<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back_drop"
    android:orientation="vertical"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginLeft="10dp"
      android:layout_marginStart="10dp"
      android:orientation="horizontal"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:padding="9dp"
        android:text="@string/mode"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/recognitionSetting"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="9"
        android:padding="9dp"
        android:gravity="end"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        />
    <ImageView
        android:id="@+id/regocnitionModeEdit"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_weight="0"
        android:src="@drawable/ic_action_about"
        />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_gravity="center_horizontal"
      >
    <TextView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:padding="6dp"
        android:textSize="22sp"
        android:text="@string/recognition_paramters"
        android:textColor="@android:color/white"
        android:layout_weight="9"
        />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:orientation="horizontal"
      android:layout_marginLeft="10dp"
      android:layout_marginStart="10dp"
      >
    <TextView
        android:id="@+id/noiseThreshold"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:padding="9dp"
        android:text="@string/noise_threshold"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/noiseThresholdValue"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="9"
        android:padding="9dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:gravity="end"
        />
    <ImageView
        android:id="@+id/noiseThresholdEdit"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_weight="0"
        android:src="@drawable/ic_action_about"
        />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:orientation="horizontal"
      android:layout_marginLeft="10dp"
      android:layout_marginStart="10dp"
      >
    <TextView
        android:id="@+id/maxRecordingTime"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:padding="9dp"
        android:text="@string/max_record_time"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/maxRecordingTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="5"
        android:gravity="end"
        android:padding="9dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        />
    <ImageView
        android:id="@+id/maxRecordingTimeEdit"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_weight="0"
        android:src="@drawable/ic_action_about"
        />
  </LinearLayout>
</LinearLayout>